Freedom Sanbox Ant Deploy/src/objects/GoalAssetAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocation_Order__c</fullName>
        <label>Allocation Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>GoalAssetAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GoalYearValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GoalYearValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>GoalAssetAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maturity_Value__c</fullName>
        <label>Maturity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GoalAssetAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{0000}</displayFormat>
        <label>G Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalAssetAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>